--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -8,7 +8,7 @@ CLOUDINARY_CLIENT_API = 134453227435189
 
 CLOUDINARY_CLIENT_SECRET = bbU9iU-ul7-UjZtc27M7qcpmsZM
 
-FRONTED_URL = https://jobfinderfronted-qizmw2uth-saurabh6789s-projects.vercel.app/
+FRONTED_URL = https://jobfinderfronted-qizmw2uth-saurabh6789s-projects.vercel.app
 
 MONGO_URI=mongodb+srv://saurabhrawat0610:rckbg1BRy90qnvcf@cluster0.xlgvqsb.mongodb.net/
 
